2006-01-20  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/DefaultFormatter/getValueClass.java:
	New test.

2006-01-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/gnu/javax/swing/text/html/parser/support/low/Buffer/Buffer_Test.java: Added 'GNU' tag,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/low/Constants/Constants_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/low/ReaderTokenizer/ReaderTokenizer_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/AttributeList_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/DTD_test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/Element_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/Entity_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/HTML_parsing.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/HTML_randomTable.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/HTML_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/parameterDefaulter_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/Parser_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/ParserEntityResolverTest.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/ParserTest.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/supplementaryNotifications.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/TagElement_Test.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/TestCase.java: Likewise,
	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/Text.java: Likewise,